--- a/src/patternfly/components/DataList/data-list.scss
+++ b/src/patternfly/components/DataList/data-list.scss
@@ -91,8 +91,7 @@
   --#{$data-list}__check--Height: calc(var(--#{$data-list}--FontSize) * var(--#{$data-list}--LineHeight));
   --#{$data-list}__check--MarginBlockStart: #{pf-size-prem(-1px)}; // slightly offset input
 
-  // actions
-  --#{$data-list}__item-action--Display: flex;
+  // * Data list item action
   --#{$data-list}__item-action--PaddingBlockStart: var(--pf-t--global--spacer--lg);
   --#{$data-list}__item-action--PaddingBlockEnd: var(--pf-t--global--spacer--lg);
   --#{$data-list}__item-action--MarginInlineStart: var(--pf-t--global--spacer--md);
@@ -316,7 +315,7 @@
 }
 
 .#{$data-list}__item-action {
-  @include pf-v6-hidden-visible(var(--#{$data-list}__item-action--Display));
+  @include pf-v6-hidden-visible('flex');
 
   gap: var(--#{$data-list}__item-action--Gap);
   align-content: flex-start;
