--- a/src/patternfly/components/DescriptionList/description-list.scss
+++ b/src/patternfly/components/DescriptionList/description-list.scss
@@ -20,16 +20,10 @@ $pf-v6-c-description-list--breakpoint-map: build-breakpoint-map("base", "sm", "m
   --#{$description-list}--m-compact--RowGap: var(--pf-t--global--spacer--md);
   --#{$description-list}--m-compact--ColumnGap: var(--pf-t--global--spacer--sm);
 
-  // term
-  --#{$description-list}__term--Display: inline;
-  --#{$description-list}__term--sm--Display: flex;
+  // * Description list term
   --#{$description-list}__term--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$description-list}__term--FontSize: var(--pf-t--global--font--size--body--sm);
   --#{$description-list}__term--LineHeight: var(--pf-t--global--font--line-height--body);
-
-  @media screen and (min-width: $pf-v6-global--breakpoint--sm) {
-    --#{$description-list}__term--Display: var(--#{$description-list}__term--sm--Display);
-  }
 
   // icon
   --#{$description-list}__term-icon--MinWidth: var(--pf-t--global--font--size--body--sm);
@@ -154,10 +148,14 @@ $pf-v6-c-description-list--breakpoint-map: build-breakpoint-map("base", "sm", "m
 }
 
 .#{$description-list}__term {
-  display: var(--#{$description-list}__term--Display);
+  display: inline;
   font-size: var(--#{$description-list}__term--FontSize);
   font-weight: var(--#{$description-list}__term--FontWeight);
   line-height: var(--#{$description-list}__term--LineHeight);
+
+  @media screen and (min-width: $pf-v6-global--breakpoint--sm) {
+    display: flex;
+  }
 
   .#{$description-list}__text {
     display: inline;
