--- a/src/patternfly/components/Pagination/pagination.scss
+++ b/src/patternfly/components/Pagination/pagination.scss
@@ -10,10 +10,7 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   // Page insets
   --#{$pagination}--m-page-insets--inset: var(--pf-t--global--spacer--lg);
 
-  // nav
-  --#{$pagination}__nav--Display: none;
-  --#{$pagination}--m-display-summary__nav--Display: none;
-  --#{$pagination}--m-display-full__nav--Display: inline-flex;
+  // * Pagination nav
   --#{$pagination}__nav--ColumnGap: var(--pf-t--global--spacer--sm);
 
   // nav page select
@@ -22,11 +19,6 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   --#{$pagination}__nav-page-select--c-form-control--width-base: calc((var(--#{$form-control}--PaddingInlineEnd) + var(--#{$form-control}--PaddingInlineStart)) + (var(--#{$form-control}--before--BorderWidth) * 2));
   --#{$pagination}__nav-page-select--c-form-control--width-chars: 2;
   --#{$pagination}__nav-page-select--c-form-control--Width: calc(var(--#{$pagination}__nav-page-select--c-form-control--width-base) + (var(--#{$pagination}__nav-page-select--c-form-control--width-chars) * 1ch));
-
-  // total items
-  --#{$pagination}__total-items--Display: block;
-  --#{$pagination}--m-display-summary__total-items--Display: block;
-  --#{$pagination}--m-display-full__total-items--Display: none;
 
   // top
   --#{$pagination}--m-sticky--BackgroundColor: var(--pf-t--global--background--color--primary--default);
@@ -46,19 +38,8 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   --#{$pagination}--m-bottom--PaddingInlineStart: var(--pf-t--global--spacer--lg);
   --#{$pagination}--m-bottom--m-sticky--BoxShadow: var(--pf-t--global--box-shadow--sm--top);
 
-  // options menu
-  --#{$pagination}__page-menu--Display--base: block;
-  --#{$pagination}__page-menu--Display: none;
-  --#{$pagination}--m-display-summary__page-menu--Display: none;
-  --#{$pagination}--m-display-full__page-menu--Display: var(--#{$pagination}__page-menu--Display--base);
-  --#{$pagination}--m-bottom__page-menu--Display: var(--#{$pagination}__page-menu--Display--base);
-  --#{$pagination}__page-menu--md--Display: var(--#{$pagination}__page-menu--Display--base);
-
   @media screen and (min-width: $pf-v6-global--breakpoint--md) {
     --#{$pagination}--m-bottom--BoxShadow: none;
-    --#{$pagination}__page-menu--Display: var(--#{$pagination}__page-menu--md--Display);
-    --#{$pagination}__nav--Display: inline-flex;
-    --#{$pagination}__total-items--Display: none;
   }
 
   @media screen and (min-width: $pf-v6-global--breakpoint--xl) {
@@ -66,6 +47,7 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   }
 }
 
+// - Pagination
 .#{$pagination} {
   display: flex;
   flex-wrap: wrap;
@@ -76,7 +58,25 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   padding-inline-end: var(--#{$pagination}--inset);
 
   .#{$pagination}__page-menu {
-    display: var(--#{$pagination}__page-menu--Display);
+    display: none;
+  }
+
+  .#{$pagination}__nav {
+    display: none;
+  }
+
+  @media screen and (min-width: $pf-v6-global--breakpoint--md) {
+    .#{$pagination}__page-menu {
+      display: block;
+    }
+
+    .#{$pagination}__nav {
+      display: inline-flex;
+    }
+
+    .#{$pagination}__total-items {
+      display: none;
+    }
   }
 
   &.pf-m-bottom {
@@ -107,7 +107,7 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
 
     .#{$pagination}__page-menu {
       position: absolute;
-      display: var(--#{$pagination}--m-bottom__page-menu--Display);
+      display: block;
     }
 
     .#{$pagination}__nav {
@@ -165,9 +165,9 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
 }
 
 
-// nav
+// - Pagination nav
 .#{$pagination}__nav {
-  display: var(--#{$pagination}__nav--Display);
+  display: inline-flex;
   column-gap: var(--#{$pagination}__nav--ColumnGap);
   justify-content: flex-end;
 }
@@ -199,25 +199,41 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
 
 // display-summary element for total-items items
 .#{$pagination}__total-items {
-  display: var(--#{$pagination}__total-items--Display);
+  display: block;
 }
 
-// stylelint-disable no-duplicate-selectors
+// stylelint-disable
 .#{$pagination} {
   @each $breakpoint, $breakpoint-value in $pf-v6-c-pagination--breakpoint-map {
     $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");
 
     @include pf-v6-apply-breakpoint($breakpoint) {
       &.pf-m-display-summary#{$breakpoint-name} {
-        --#{$pagination}__nav--Display: var(--#{$pagination}--m-display-summary__nav--Display);
-        --#{$pagination}__page-menu--Display: var(--#{$pagination}--m-display-summary__page-menu--Display);
-        --#{$pagination}__total-items--Display: var(--#{$pagination}--m-display-summary__total-items--Display);
+        .#{$pagination}__nav {
+          display: none;
+        }
+
+        .#{$pagination}__page-menu {
+          display: none
+        }
+
+        .#{$pagination}__total-items {
+          display: block;
+        }
       }
 
       &.pf-m-display-full#{$breakpoint-name} {
-        --#{$pagination}__nav--Display: var(--#{$pagination}--m-display-full__nav--Display);
-        --#{$pagination}__page-menu--Display: var(--#{$pagination}--m-display-full__page-menu--Display);
-        --#{$pagination}__total-items--Display: var(--#{$pagination}--m-display-full__total-items--Display);
+        .#{$pagination}__nav {
+          display: inline-flex
+        }
+
+        .#{$pagination}__page-menu {
+          display: block;
+        }
+
+        .#{$pagination}__total-items {
+          display: none;
+        }
       }
 
       @each $spacer, $spacer-value in $pf-v6-c-pagination--variable-map {
