--- a/src/patternfly/components/Sidebar/sidebar.scss
+++ b/src/patternfly/components/Sidebar/sidebar.scss
@@ -47,8 +47,6 @@ $pf-v6-c-sidebar__panel--list--width: ("default", 25, 33, 50, 66, 75, 100);
   --#{$sidebar}--m-gutter__main--Gap: var(--#{$sidebar}--inset);
 
   // Border
-  --#{$sidebar}__main--m-border--before--Display: none;
-  --#{$sidebar}__main--m-border--before--md--Display: block;
   --#{$sidebar}__main--m-border--before--BorderWidth: var(--#{$sidebar}--BorderWidth--base);
   --#{$sidebar}__main--m-border--before--BorderColor: var(--#{$sidebar}--BorderColor--base);
 
@@ -71,7 +69,6 @@ $pf-v6-c-sidebar__panel--list--width: ("default", 25, 33, 50, 66, 75, 100);
   --#{$sidebar}--m-split__panel--Position: static;
   --#{$sidebar}--m-split__panel--InsetBlockStart: auto;
   --#{$sidebar}--m-split--m-panel-right__panel--Order: 1;
-  --#{$sidebar}--m-split__main--m-border--before--Display: block;
 
   // Panel
   --#{$sidebar}__panel--FlexBasis--base: auto;
@@ -105,11 +102,14 @@ $pf-v6-c-sidebar__panel--list--width: ("default", 25, 33, 50, 66, 75, 100);
   @media (min-width: $pf-v6-global--breakpoint--md) {
     --#{$sidebar}__main--FlexDirection: var(--#{$sidebar}__main--md--FlexDirection);
     --#{$sidebar}__main--AlignItems: var(--#{$sidebar}__main--md--AlignItems);
-    --#{$sidebar}__main--m-border--before--Display: var(--#{$sidebar}__main--m-border--before--md--Display); // show border starting at md breakpoint
     --#{$sidebar}__panel--BoxShadow: none;
     --#{$sidebar}__panel--FlexBasis: var(--#{$sidebar}__panel--md--FlexBasis);
     --#{$sidebar}__panel--InsetBlockStart: var(--#{$sidebar}__panel--md--InsetBlockStart);
     --#{$sidebar}__panel--Position: var(--#{$sidebar}__panel--md--Position);
+
+    .#{$sidebar}__main.m-border::before {
+      display: block;
+    }
   }
 
   @media (min-width: $pf-v6-global--breakpoint--xl) {
@@ -137,8 +137,11 @@ $pf-v6-c-sidebar__panel--list--width: ("default", 25, 33, 50, 66, 75, 100);
     --#{$sidebar}__panel--InsetBlockStart: var(--#{$sidebar}--m-stack__panel--InsetBlockStart);
     --#{$sidebar}__panel--BoxShadow: var(--#{$sidebar}--m-stack__panel--BoxShadow);
     --#{$sidebar}__panel--FlexBasis: var(--#{$sidebar}__panel--m-stack--FlexBasis);
-    --#{$sidebar}__main--m-border--before--Display: none;
     --#{$sidebar}--m-panel-right__panel--Order: var(--#{$sidebar}--m-stack--m-panel-right__panel--Order);
+
+    .#{$sidebar}__main--m-border::before {
+      display: none;
+    }
   }
 
   &.pf-m-split {
@@ -148,8 +151,11 @@ $pf-v6-c-sidebar__panel--list--width: ("default", 25, 33, 50, 66, 75, 100);
     --#{$sidebar}__panel--InsetBlockStart: var(--#{$sidebar}--m-split__panel--InsetBlockStart);
     --#{$sidebar}__panel--BoxShadow: none;
     --#{$sidebar}__panel--FlexBasis: var(--#{$sidebar}__panel--m-split--FlexBasis);
-    --#{$sidebar}__main--m-border--before--Display: var(--#{$sidebar}--m-split__main--m-border--before--Display);
     --#{$sidebar}--m-panel-right__panel--Order: var(--#{$sidebar}--m-split--m-panel-right__panel--Order);
+
+    .#{$sidebar}__main--m-border::before {
+      display: block;
+    }
   }
 }
 
@@ -159,7 +165,7 @@ $pf-v6-c-sidebar__panel--list--width: ("default", 25, 33, 50, 66, 75, 100);
   align-items: var(--#{$sidebar}__main--AlignItems);
 
   &.pf-m-border::before {
-    display: var(--#{$sidebar}__main--m-border--before--Display);
+    display: block;
     flex: 0 0 var(--#{$sidebar}__main--m-border--before--BorderWidth);
     align-self: stretch;
     content: "";
@@ -233,6 +239,13 @@ $pf-v6-c-sidebar__panel--list--width: ("default", 25, 33, 50, 66, 75, 100);
 
   :where(&:first-child) {
     --#{$sidebar}__content--Order: -1;
+  }
+}
+
+// - Sidebar border
+.#{$sidebar}.pf-m-border {
+  .#{$sidebar}__panel {
+    box-shadow: none;
   }
 }
 
